# NEWGTK

./: mingw-w64-x86_64.cmake
dotnet/: dotnet.sln
dotnet/IEC61850forCSharp/: Control.cs  IEC61850.NET.csproj  MmsValue.cs  Reporting.cs
dotnet/example1/: example1.csproj
dotnet/reporting/: reporting.csproj
dotnet/server1/: Program.cs
examples/: .cproject  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
examples/GTK/: .cproject  .project  CMakeLists.txt  git  Новый файл 1  пароль тут 
examples/GTK/client/: client_example_log.c
examples/GTK/src/: client_gui.c  client_gui.h  client_wrapper.c  client_wrapper.h  main.c
examples/config/: stack_config.h
examples/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/goose_observer/: .cproject  .project
examples/goose_publisher/: .cproject  .project  goose_publisher_example
examples/goose_subscriber/: .cproject  .project  goose_subscriber_example
examples/hal/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/iec61850_9_2_LE_example/: .cproject  .project  sv_9_2LE_example
examples/iec61850_client_example1/: .cproject  .project  client_example1
examples/iec61850_client_example2/: .cproject  .project  client_example2
examples/iec61850_client_example4/: .cproject  .project  client_example4
examples/iec61850_client_example5/: .cproject  .project  client_example5
examples/iec61850_client_example_ClientGooseControl/: .cproject  .project  client_example_ClientGooseControl
(+278 files in other folders)
